--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,31 +1,25 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-toolbar {
+  --background: transparent;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.banner {
+  background-image: url("../../assets/img/banner.png");
+  background-size: cover;
+
+  ion-title {
+    color: whitesmoke;
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.banner-text {
+  color: whitesmoke;
+  text-shadow: 2px 2px 4px black;
 }
 
-#container a {
-  text-decoration: none;
-}
-
-ion-content ion-toolbar {
-  --background: translucent;
+.contenedor-principal {
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.40);
+  margin-top: -15px;
+  margin-bottom: 15px;
 }
